# OpenCritique

./: .env.local  .gitignore  Cargo.toml  README.md  bounty_test.sh  commands_used.txt  dfx.json  package-lock.json  package.json  restart.sh  test.sh  todo.text
src/opencritique_backend/: Cargo.toml  opencritique_backend.did  test.sh
src/opencritique_backend/src/: bounty.rs  lib.rs
src/opencritique_frontend/: .env.local  index.html  package.json  tailwind.config.js  tsconfig.json
src/opencritique_frontend/src/: App.jsx  hello-world.txt  images_cid.js  index.css  index.scss  main.jsx  test-supabase.js
src/opencritique_frontend/src/components/: ArtCard.jsx  ArtCardDetail.jsx  ArtworkDetail.jsx  CardSwap.jsx  CardSwapCore.jsx  CommunitySection.jsx  Dashboard.jsx  DashboardArtCard.jsx  DecryptedText.jsx  FeaturesSection.jsx  Footer.jsx  GooeyNav.css  GooeyNav.jsx  HowItWorksSection.jsx  HowItWorksSwap.jsx  InteractiveHero.jsx  LoadingSpinner.jsx  MarketPlace.jsx  MyStudio.jsx  MyStudioArtCard.jsx  NFTArtCard.jsx  Navbar.jsx  PageTransition.jsx  SplitText.jsx  StatsCircle.jsx  SupabaseTest.jsx  TestSupabaseConnection.jsx  Upload.jsx  UploadForm.jsx  UserArtCardDetail.jsx  Welcome.jsx
src/opencritique_frontend/src/components/NFT/: NFTArtCard.jsx  PurchaseModel.jsx
src/opencritique_frontend/src/context/: ArtContext.jsx
src/opencritique_frontend/src/lib/: utils.js
src/opencritique_frontend/src/pages/: Community.jsx  Featues.jsx  Hero.jsx  LandingPage.jsx  Working.jsx
src/opencritique_frontend/src/services/: ic_agents.ts  opencritique.ts  pinataUpload.js
(+9 files in other folders)
