[package]
name = "opencritique_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.12.3"
ic-cdk-macros = "0.8.0"
candid = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
ic-ledger-types = "0.9.0"
hex = "0.4"  # This is the new dependency causing the issue